Button fix on mobile

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ footer {
 		display: flex;
 		vertical-align: middle;
 		margin: auto;
-		width: 100px;
+		width: 200px;
 		margin-top: 12px;
 	}
 	.categories a {
